--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -7,8 +8,14 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "node-fecth": "^0.0.1-security",
+    "nunjucks": "^3.2.3",
+    "passport": "^0.6.0",
+    "passport-kakao": "^1.0.1",
+    "qs": "^6.11.0",
     "sequelize": "^6.25.3",
     "sequelize-cli": "^6.5.2",
+    "session": "^0.1.0",
     "socket.io": "^4.5.3"
   }
 }
