--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "aws-sdk": "^2.1249.0",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -8,6 +9,8 @@
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
     "node-fecth": "^0.0.1-security",
     "nunjucks": "^3.2.3",
