--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "passport-kakao": "^1.0.1",
     "qs": "^6.11.0",
     "request": "^2.88.2",
-    "sequelize": "^6.25.3",
-    "sequelize-cli": "^6.5.2",
+    "sequelize": "^6.25.5",
     "socket.io": "^4.5.3",
     "swagger-autogen": "^2.22.0",
     "swagger-ui-express": "^4.5.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.5.2"
   }
 }
