--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "multer-s3": "^2.10.0",
     "mysql2": "^2.3.3",
     "node-fecth": "^0.0.1-security",
+    "node-sens": "^1.3.0",
     "nodemailer": "^6.8.0",
     "nunjucks": "^3.2.3",
     "passport": "^0.6.0",
     "passport-kakao": "^1.0.1",
     "pug": "^3.0.2",
     "qs": "^6.11.0",
+    "redis": "^4.5.0",
     "request": "^2.88.2",
     "sequelize": "^6.25.6",
     "socket.io": "^4.5.3",
