--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -28,5 +28,5 @@ jobs:
             cd ${{ secrets.CI_CD_PATH1 }}
             cd ${{ secrets.CI_CD_PATH2 }}
             sudo git pull origin master
-            sudo npm install
+            npm install
             sudo pm2 restart app.js
