--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -20,12 +20,13 @@ jobs:
       - name: Deploy
         uses: appleboy/ssh-action@v0.1.5
         with:
-          key: ${{ secrets.CI_CD_KEY_J }}
-          host: ${{ secrets.CI_CD_HOST_J }}
+          key: ${{ secrets.CI_CD_KEY }}
+          host: ${{ secrets.CI_CD_HOST }}
           username: ${{ secrets.CI_CD_USERNAME }}
           port: ${{ secrets.CI_CD_PORT }}
           script: |
             cd ${{ secrets.CI_CD_PATH1 }}
+            cd ${{ secrets.CI_CD_PATH2 }}
             sudo git pull origin master
             npm install
             sudo pm2 restart app.js
