--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -67,6 +67,6 @@ jobs:
           script: |
             cd ${{ secrets.CI_CD_PATH1 }}
             cd ${{ secrets.CI_CD_PATH2 }}
-            sudo git pull origin master
+            sudo git pull origin juri
             sudo npm install
             sudo pm2 restart app.js
