--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
@@ -35,8 +36,10 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "artillery": "^2.0.0-27",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.5.2"
+    "sequelize-cli": "^6.5.2",
+    "supertest": "^6.3.3"
   },
   "name": "final_spots_be",
   "description": "![spots_main-02](https://user-images.githubusercontent.com/112181770/203052639-6aab4879-8e50-4219-b2cd-dbf910547fb0.jpg)",
