--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -12,6 +12,10 @@ jobs:
     name: CI_Build
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        redis-version: [4.0.9]
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -19,9 +23,14 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
-          
-      # env 설정    
+          node-version: "16.x"
+
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.4.0
+        with:
+        redis-version: ${{ matrix.redis-version }}
+
+      # env 설정
       - name: Setting .env
         run: |
           echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> .env
@@ -47,7 +56,7 @@ jobs:
       # jest 테스트를 수행합니다.
       - name: Run tests
         run: npm run test
-        
+
   deploy:
     name: CD_TEST
     if: ${{ always() }}
