12/8 woosung fix redis

--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Start Redis
         uses: supercharge/redis-github-action@1.4.0
         with:
-        redis-version: ${{ matrix.redis-version }}
+        redis-version: [4.0.9]
 
       # env 설정
       - name: Setting .env
