12/8 woosung fix redis

--- a/.github/workflows/CI_CD.yml
+++ b/.github/workflows/CI_CD.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           node-version: "16.x"
 
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.4.0
+        with:
+          redis-version: "4.0.9"
+
       # env 설정
       - name: Setting .env
         run: |
