--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ nodemon.json
 /before.json
 /before.json.html
 /reservationsSuper.test.js
+loadtest.yaml
+before.json
+before.json.html
+reservationsSuper.test.js
