--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "aws-sdk": "^2.1249.0",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
